@@ -91,6 +91,9 @@ Version 1.9.8:
   * fix crash when macro names contain non-ascii chars
   * CopyPage action: fix NameError exception when TextCha was answered wrong
   * docbook formatter: fix image URL generation, avoid script name duplication
+  * fix caching scope of name2id/openid2id caches (was: "wiki", now:
+    "userdir"). this is relevant for shared user_dir configurations.
+  * moin maint cleancache: cleans up openid2id cache now also
 
   Other changes:
   * rss_rc action (RSS feed) is now much faster / much less resource consuming
